geospatial-analysis/k8s/sirius-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-services
  template:
    metadata:
      labels:
        app: data-services
    spec:
      containers:
        - name: proxy-riuslabs
          args:
            - ./riuslabs-ui-app/gradio_proxy.py
          command:
            - /usr/local/bin/python3.10
          image: presight.jfrog.io/test-docker/data-services
          ports:
            - containerPort: 8000
        - name: redis
          image: redis:7.2.3
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "1"
              memory: "1Gi"
        - name: data-services
          args:
            - ./webapp/playground_app.py
          command:
            - /usr/local/bin/python3.10
          image: presight.jfrog.io/test-docker/data-services
          resources:
            limits:
              cpu: "3"
              memory: "8Gi"
              nvidia.com/gpu: "1"
            requests:
              cpu: "3"
              memory: "8Gi"
              nvidia.com/gpu: "1"
          ports:
            - containerPort: 7501
      tolerations:
        - key: "key1"
          operator: "Equal"
          value: "gpuNode"
          effect: "NoSchedule"
