geospatial-analysis/k8s/studio-sirius-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-services-studio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-services-studio
  template:
    metadata:
      labels:
        app: data-services-studio
    spec:
      containers:
        - name: data-services-studio
          image: presight.jfrog.io/test-docker/labeldata_studio
          resources:
            limits:
              cpu: "1"
              memory: "4Gi"
            requests:
              cpu: "0.5"
              memory: "1Gi"
