geospatial-analysis/k8s/studio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-services-riuslab-ui-app
spec:
  selector:
    app: data-services-studio
  ports:
    - protocol: TCP
      port: 7737
      targetPort: 7737
